- Related content nowrap - fixed - Scroll padding - fixed - Make scroll bar invisible in mobile - check

--- a/Sass/base/_typography.scss
+++ b/Sass/base/_typography.scss
@@ -180,6 +180,11 @@ div.introduction {
 
   a {
     color: $silver; // text color
+    white-space: nowrap;
+
+    @include bp(small) {
+      white-space: normal !important;
+    }
 
     &:hover {
       color: $silver !important;
