--- a/Sass/components/_scroll.scss
+++ b/Sass/components/_scroll.scss
@@ -4,12 +4,22 @@
   @include bp(small) {
     width: 0.5rem;
   }
+  @include bp(very-small) {
+    width: 0px;
+  }
 }
 ::-webkit-scrollbar-track {
   background-color: hsla(0, 0%, 30%, 0.05);
 }
 ::-webkit-scrollbar-thumb {
   background-color: #6d6d6f;
+
+  &:hover {
+    background-color: darken(#6d6d6f, 12%);
+  }
+  &:active {
+    background-color: darken(#6d6d6f, 18%);
+  }
 }
 
 // specific
@@ -19,6 +29,10 @@
   scrollbar-color: darken($cyan, 9%) lighten($black, 7%);
   scrollbar-width: $scrollbar-width, 0.8rem;
   transition: background-color 0.2s;
+
+  @include bp(very-small) {
+    scrollbar-width: 0;
+  }
 
   &::-webkit-scrollbar {
     width: $scrollbar-width, 0.8rem;
